plugins {
    id 'java'
    id 'org.springframework.boot' version '4.0.4'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.fbisquerra'
version = '0.0.1-SNAPSHOT'
description = 'aboutme'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(26)
    }
}

repositories {
    mavenCentral()
}

configurations {
    mockitoAgent
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-json'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-flyway'
    implementation 'org.flywaydb:flyway-mysql'
    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.boot:spring-boot-testcontainers'
    testImplementation platform('org.testcontainers:testcontainers-bom:1.20.6')
    testImplementation 'org.testcontainers:junit-jupiter'
    testImplementation 'org.testcontainers:mariadb'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    mockitoAgent("org.mockito:mockito-core") { transitive = false }
}

tasks.named('test') {
    useJUnitPlatform()
    jvmArgs "-javaagent:${configurations.mockitoAgent.asPath}"
}

def executeNpm(Exec task, List<String> args) {
    task.workingDir 'frontend'

    def profile = project.findProperty('profile') ?: 'local'

    if (profile == 'pro') {
        task.environment 'PATH', System.getenv('PATH')
        task.commandLine 'sh', '-c', "npm ${args.join(' ')}"
    } else {
        task.commandLine(['npm'] + args)
    }
}

tasks.register('installFrontend', Exec) {
    executeNpm(it, ['install'])
}

tasks.register('buildFrontend', Exec) {
    dependsOn 'installFrontend'
    executeNpm(it, ['run', 'build'])
}

def composeFiles(String profile) {
    def files = ['docker', 'compose', '-f', 'infrastructure/docker/docker-compose.yml']
    if (profile == 'pro') {
        files += ['-f', 'infrastructure/docker/docker-compose.prod.yml']
    } else if (profile == 'dev') {
        files += ['-f', 'infrastructure/docker/docker-compose.dev.yml']
    } else {
        files += ['-f', 'infrastructure/docker/docker-compose.local.yml']
    }
    return files
}

tasks.register('dockerRun', Exec) {
    def profile = project.findProperty('profile') ?: 'local'

    def args
    if (profile == 'dev') {
        // dev: only spin up MariaDB; the backend/frontend run as local processes
        args = composeFiles(profile) + ['--env-file', '.env', 'up', '-d', 'db']
    } else {
        dependsOn 'bootJar', 'buildFrontend'
        args = composeFiles(profile) + ['--env-file', '.env', 'up', '--build', '-d']
    }

    doFirst {
        println "Starting with profile: ${profile}"
        println "Running: ${args.join(' ')}"
    }

    commandLine args
}

tasks.register('dockerStop', Exec) {
    def profile = project.findProperty('profile') ?: 'local'

    commandLine composeFiles(profile) + ['stop']

    doFirst {
        println "Stopping containers for profile: ${profile}"
    }
}

tasks.register('dockerStart', Exec) {
    def profile = project.findProperty('profile') ?: 'local'

    commandLine composeFiles(profile) + ['start']

    doFirst {
        println "Starting containers for profile: ${profile}"
    }
}
